# AgentDocstrings

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  apply_better_comments.py  git_diff.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
Doc/: ROADMAP.md
agent_docstrings/: __init__.py  cli.py  core.py  go_ast_parser.go
agent_docstrings/languages/: common.py  delphi.py  generic.py  go.py  java.py  kotlin.py  powershell.py  python.py
tests/: conftest.py  test_ast_integration.py  test_ast_parsers.py  test_cli.py  test_common.py  test_core.py  test_discovery.py  test_parser.py  test_writer.py
tests/fixtures/: kotlin_with_multiline_comment.kt  python_with_manual_docstring.py
