[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-docstrings"
version = "0.1.0"
description = "A command-line tool to auto-generate and update file-level docstrings summarizing classes and functions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your@email.com" } # ! TODO: Please update this
]
requires-python = ">=3.8"
keywords = ["documentation", "comments", "code-quality", "automation", "llm", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.scripts]
agent-docstrings = "agent_docstrings.cli:main"

[project.optional-dependencies]
# ! Provides dependencies required for running the test-suite
# ! Developers should install them via `pip install .[testing]`.
testing = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
] 